syntax = "proto3";
package request;
option go_package = "douyin/proto/favorite/request";

message douyin_favorite_action_request {
  int64 video_id = 1;
  int32 action_type = 2;
  int64 login_user_id = 3;
}

message douyin_favorite_list_request {
  int64 user_id = 1;
  int64 login_user_id = 2;
}

message douyin_favorite_count_request {
  repeated int64 video_id = 1;
  int64 user_id = 2;
}

message douyin_favorite_id_list_request {
  int64 user_id = 1;
}

message douyin_favorite_list_id_list_request {
  repeated int64 user_id = 1;
}

message douyin_get_user_favorited_count_request {
  repeated int64 user_id = 1;
}